--- a/.github/workflows/badge_generators.yaml
+++ b/.github/workflows/badge_generators.yaml
@@ -3,6 +3,12 @@ on:
   schedule:
     # 00:00 JST = 15:00 UTC
     - cron: "0 15 * * *"
+  workflow_dispatch:
+    inputs:
+      force:
+        description: 'Force update badges'
+        required: false
+        default: 'false'
 
 permissions:
   contents: write
