--- a/.github/workflows/badge_generators.yaml
+++ b/.github/workflows/badge_generators.yaml
@@ -17,10 +17,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate trophy
-        uses: Erik-Donath/github-profile-trophy@feature/generate-svg
+        uses: soulteary/github-profile-trophy-action@v1.0.0
         with:
-          username: ${{ github.repository_owner }}
-          output_path: .github/assets/trophy.svg
+          options: 'username=${{ github.repository_owner }}&margin-w=5&column=8'
+          path: .github/assets/trophy.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: vn7n24fzkq/github-profile-summary-cards@release
